first modification to config.yml

--- a/.Circleci/config.yml
+++ b/.Circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
  docker-publisher:
    environment:
-     IMAGE_NAME: vishnusk/circleci-test
+     IMAGE_NAME: 123456project/circleci-test
    docker:
      - image: circleci/buildpack-deps:trusty
 jobs:
